import java.util.regex.Matcher

buildscript {
    repositories {
        maven {
            url 'https://plugins.gradle.org/m2/'
        }
    }
    dependencies {
        classpath 'net.researchgate:gradle-release:3.0.2'
    }
}

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.researchgate.release' version '3.0.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = 'org.neil.ai'
            artifactId = 'ai'
            version = version.toString()

            from components.java
        }
    }
}

afterReleaseBuild.dependsOn publishToMavenLocal

release {

    failOnCommitNeeded = true
    failOnPublishNeeded = true
    failOnSnapshotDependencies = true
    failOnUnversionedFiles = true
    failOnUpdateNeeded = true
    revertOnFail = true
    preCommitText = ''
    preTagCommitMessage = '[Gradle Release Plugin] - pre tag commit: '
    tagCommitMessage = '[Gradle Release Plugin] - creating tag: '
    newVersionCommitMessage = '[Gradle Release Plugin] - new version commit: '
    tagTemplate = version.toString()
    versionPropertyFile = 'gradle.properties'
    versionProperties = []
    snapshotSuffix = '-SNAPSHOT'
    buildTasks = []
    ignoredSnapshotDependencies = []
    versionPatterns = [
            /(\d+)([^\d]*$)/: { Matcher m, Project p -> m.replaceAll("${(m[0][1] as int) + 1}${m[0][2]}") }
    ]
    pushReleaseVersionBranch = null
    scmAdapters = [
            net.researchgate.release.GitAdapter
    ]

    git {
        requireBranch.set('main')
        pushToRemote.set('origin')
        pushToBranchPrefix.set('')
        commitVersionFileOnly.set(false)
        signTag.set(false)
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

sourceCompatibility = '1.17'

test{
    useJUnitPlatform()
}

dependencies {
    // https://mvnrepository.com/artifact/org.projectlombok/lombok
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.34'

    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.18.0-rc1'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.18.0-rc1'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.18.0-rc1'

    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.13.0'

    testCompileOnly 'org.junit.jupiter:junit-jupiter-api:5.11.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.11.0'
    testCompileOnly 'org.apiguardian:apiguardian-api:1.0.0'
}
